name:              yesod-chatapp
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         yesod-chatapp
    hs-source-dirs: .

    main-is:           main.hs

    ghc-options:       -W -Wall -threaded -O2 -rtsopts -with-rtsopts=-N

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , yesod-websockets              >= 0.2.4
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-sqlite             >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , conduit-combinators           >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , yesod-auth-hashdb             >= 1.4.2
                 , pwstore-fast                  >= 2.0
                 , stm                           >= 2.4        && < 3.0
                 , markdown                      >= 0.1.13     && < 0.2
                 , blaze-html                    >= 0.8.1.1    && < 0.9
