name:              yesod-chatapp
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         yesod-chatapp
    hs-source-dirs: .

    main-is:           main.hs

    ghc-options:       -W -Wall -threaded -O2 -rtsopts -with-rtsopts=-N

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-websockets              >= 0.2.4
                 , text                          >= 0.11       && < 2.0
                 , persistent-sqlite             >= 2.1.1      && < 2.3
                 , shakespeare                   >= 2.0        && < 2.1
                 , monad-control                 >= 0.3        && < 1.1
                 , http-conduit                  >= 2.1        && < 2.2
                 , aeson                         >= 0.6        && < 0.10
                 , conduit-combinators           >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , yesod-auth-hashdb             >= 1.4.2
                 , stm                           >= 2.4        && < 3.0
                 , markdown                      >= 0.1.13     && < 0.2
                 , blaze-html                    >= 0.8.1.1    && < 0.9
                 , mtl                           >= 2.2        && < 2.3
